# website

./: .gitignore  .gitmodules  .travis.yml  LICENSE  about.md  contact.markdown  contact.md  default.nix  deploy.sh  flake.nix  index.html  pelicanconf.py  publishconf.py  readme.md  release.nix  shell.nix  site.hs  stack.yaml  versions.json  website.cabal  website.nix
.ci/: update_pages.sh
blog/: 2014-05-20-first-post.md  2014-06-04-jakarta-walking.md  2015-02-01-blog-setup.md  2015-02-26-automate-resume.md  2015-05-10-git-it-going.md  2016-06-17-haskell-state.md  automate-resume.md  binary-trees-to-hamts.md  blog-setup.md  dag-toolkit.md  data-is-code.md  discovering-continuations.md  easy-ghc-hacking.md  easy-pull-requests.md  faking-non-nixos-stack.md  first-post.md  functional-devops.md  getting-along-with-javascript.md  getting-to-rc.md  ghc-syntax-hakyll.md  ghci-in-the-browser.md  git-it-going.md  hamts-from-scratch.md  haskell-state.md  i-haskell-a-git.md  ihaskell-cocalc.md  ihaskell-mybinder.md  ihaskell-nix-docker.md  imperative-haskell.md  industrial-strength-deployments.md  jakarta-walking.md  low-effort-dependency-pinning-flakes.md  minimal-perfect-hashing.md  monad-anti-tutorial.md  moving-towards-dialogue.md  popcount.md  quick-easy-nixpkgs-pinning.md  refactoring-haskell.md  revisiting-monadic-parsing-haskell.md  satisfying-solutions.md  (+5 more)
content/: first.md  walking.md
css/: default.css  syntax.css
drafts/: easy-pull-requests.md  fast-presentations-done-cheap.md  fun-github-actions.md  functional-devops.md  functional-infrastructure.md  popcount.md  (+27 more)
(+37 files in other folders)
