name:               website
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:             BSD3
license-file:        LICENSE

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll
                  , filepath
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
